--- a/test.component.html
+++ b/test.component.html
@@ -1,4 +1,4 @@
-<div>
+<!--<div>
     <h3>Date Pipe</h3><br>
     Today is a short date: {{ presentDate | date:'shortDate' }}<br>
     This line shows a full date: {{ presentDate | date:'fullDate' }}<br>
@@ -33,4 +33,8 @@
     Apply formatting: {{ decimalNum2 | number: '3.1-4'}}<br>
     Apply formatting: {{ decimalNum1 | number}}<br>
     Apply formatting: {{ decimalNum2 | number}}<br>
+</div>-->
+
+<div>
+    {{ price$ | currency : 'CAD' }}
 </div>
